XNA version: added bufferPercent to create a proper sizing with the blockBuffer amount, so the window would change dynamically with the sizing. (will be needed later.
Console version: started on the delving AI to create the map. (barely)

Most updates after this will be in the Console version to perfect the AI.

--- a/MazeConsoleExample/MazeConsoleExample/MazeConsoleExample.csproj
+++ b/MazeConsoleExample/MazeConsoleExample/MazeConsoleExample.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{204C2D9D-861E-49F0-8267-53B399497E5E}</ProjectGuid>
+    <ProjectGuid>{02DDD9C2-F6EA-4DFE-BC98-F1FB6874022B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MazeTest</RootNamespace>
-    <AssemblyName>MazeTest</AssemblyName>
+    <RootNamespace>MazeConsoleExample</RootNamespace>
+    <AssemblyName>MazeConsoleExample</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,13 +32,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Main.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
